.app/_styles/main.css
/*

@cryptpad_color_white: #FFF;
@cryptpad_color_grey_200: #EEEEEE;
@cryptpad_color_grey_250: #E7E7E7;
@cryptpad_color_grey_300: #E0E0E0;
@cryptpad_color_grey_400: #BDBDBD;
@cryptpad_color_grey_500: #9E9E9E;
@cryptpad_color_grey_600: #757575;
@cryptpad_color_grey_700: #616161;
@cryptpad_color_grey_800: #424242;
@cryptpad_color_grey_900: #212121;
@cryptpad_color_grey_950: #121212;

@cryptpad_color_brand: #0087FF;
@cryptpad_color_brand_dark: #99cfff;

#FFD4D4,
#FFDECA,
#FFE69C,
#DBFFB7,
#AFFDC2,
#C9FFFE,
#C8D6FF,
#E4CAFF;

*/

:root{
    --col-primary: #212121;
    --col-background: hsl(208, 76%, 95%);
    --col-unit-s: #0087FF66;
    --col-unit-l: #9838ff;
    --col-badge: #e0e0e0;
    --corner: 1rem;
    --shadow: 2px 2px 8px #0087FF;
}

@media (prefers-color-scheme: dark) {

}

/* Layout */

@font-face {
    font-family: 'IBM Plex Mono';
    font-style: normal;
    font-weight: 500;
    src: url("/_styles/fonts/IBMPlexMono-Medium.woff2") format("woff2"), url("/_styles/fonts/IBMPlexMono-Medium.woff") format("woff");
}

html, body {
    color: var(--col-primary);
    background-color: var(--col-background);
    font-family: monospace;
    font-size: 15px;
    /* height: 100%; */
}

h1, h2, h3, h4, nav {
    font-family: "IBM Plex Mono";
}

body {
    margin: 0px;
  }

  #BG-grid-1, #BG-grid-2 {
    width: 100%;
    height: 100%;
    position: fixed;
    top: -1px;
    left: -1px;
  }

  #BG-grid-1 {
    background-image: linear-gradient(to right, var(--col-unit-s) 1px, transparent 1px), linear-gradient(to bottom, var(--col-unit-s) 1px, transparent 1px);
    background-size: 1rem 1rem;
    z-index: 0;
  }

  #BG-grid-2 {
    background-size: 10rem 10rem;
    background-image: linear-gradient(to right, var(--col-unit-l) 1px, transparent 1px), linear-gradient(to bottom, var(--col-unit-l) 1px, transparent 1px);
    /* border: 1px solid var(--col-unit-l); */
    z-index: 1;
  }

.container {
    display: grid;
    /* height: 100%; */
    grid-template-columns: 20rem auto;
    grid-template-areas:
        "nav main"
        ". footer";
    column-gap: 1rem;
    position: relative;
    z-index: 10;
    margin: 2rem 2rem;
}

.page-content {
    display: flex;
    flex-direction: row;
    margin: 0;
    grid-area: main;
}

main {
    /* flex-grow: 1; */
    margin: 1px;
    height: fit-content;
    width: 100%;
    margin-top: -0.5rem;
    margin-bottom: 5rem;
    position: relative;
    z-index: 9;
}

main.single-page, article.block, footer{
    padding: 1rem;
    border-radius: var(--corner);
    box-shadow: var(--shadow);
    background: white;
    max-width: 65ch;
}

main p {
    max-width: 75ch;
}

main ul {
    padding-left: 1rem;
}

.block-container {
    width: auto;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

article.block {
    padding: 1rem;
    margin: 1rem;
    max-width: 40ch;
    display: block;
    height: min-content;
}

article.header {
    margin: 0 0 1rem 0;
    max-width: 65ch;
}

footer {
    max-width: unset;
    grid-area: footer;
}

/* Typography */

article h1 {
    font-size: 2rem;
}

article.block h2 {
    margin-top: .2rem;
}

figure {
    max-width: 100%;
}

figcaption {
    font-style: italic;
}

.badge {
    background-color: var(--col-badge);
    border-radius: var(--corner);
    padding: 0 1em;
}

/* Navigation */

nav#site-contents {
    background: white;
    padding: 0;
    height: fit-content;
    margin: -0.5rem 0.5rem 0 -0.5rem;
    border-radius: var(--corner);
    box-shadow: var(--shadow);
    /* position: sticky; */
    top: 1.5rem;
}

nav #nav-title {
    display: block;
    padding: 1rem 1rem 0 1rem;
}

nav#site-contents ol {
    padding: 0;
    list-style-type: none;
    margin-left: .75rem;
}

li.nav.without-children {
    list-style-type: disc;
    list-style-position: inside;
}

li.nav.without-children a {
    margin-left: -0.70rem;
}

li.current > details > summary > a,
li.current > details > summary > a:visited,
li.current > a,
li.current > a:visited {
    color: var(--col-primary);
}

a, a:visited {
    color: var(--col-unit-l);
}

a:hover, a:focus-visible {
    color: var(--col-primary);
}

nav.breadcrumb {
    padding: 0.5em;
}

nav.breadcrumb ol {
    margin: 0;
    padding-left: 0;
    list-style: none;
}

nav.breadcrumb li {
    display: inline;
}

nav.breadcrumb li + li::before {
    display: inline-block;
    margin: 0 1em 0 0.5em;
    transform: rotate(15deg);
    border-right: 0.1em solid currentcolor;
    height: 0.8em;
    content: "";
}

/* home page */
.block-container-home {
    width: auto;
    /* display: flex;
    flex-direction: column;
    flex-wrap: wrap; */
}


article.block.header h1 {
    margin: 0.5rem 0;
}

article.block.roadmap {
    max-width: 1280px;
}

pre.mermaid {
    background-color: transparent;
    max-width: 1280px;
  }

article.block.home-intro {
    max-width: 75ch;
}


pre {
    background: #eee;
    overflow-y: scroll;
    border-radius: 0.75rem;
    padding: 0.5rem;
  }

/*  sIdebar */

details {
    h3 {
        display: inline-block;
        margin: 0.5rem 0;
    }
}


.page-content aside#sidebar {
    background-color: white;
    height: fit-content;
    width: fit-content;
    border-radius: 0 var(--corner) var(--corner) 0;
    margin: 2rem 0 0 -1px;
    padding: 1rem;
    position: relative;
    z-index: 8;
    box-shadow: var(--shadow);
}

.page-content aside#sidebar p {
    margin: 0 0 0.5rem 0;
}

a.btn {
    display: inline-block;
    font-weight: bold;
    text-decoration: none;
    border: 1px solid var(--col-unit-l);
    padding: 1rem;
    border-radius: 1rem;
}

.page-content {
    .metadata {
        display: none;
        p {
            display: inline-block;
        }
    }
}

/* Page TOC */

.toc__item {
    margin-block: var(--space-1);
    margin-inline-start: calc((var(--level, 1) - 1) * 1rem);
}

ul.toc__list {
    padding-left: 1rem;
    list-style-type: disc;
  }

/* Small screens */

@media screen and (max-width: 940px) {
    .container{
        grid-template-columns: 1fr;
        grid-template-areas:
        "main"
        "nav"
        "footer";
    }

    nav#site-contents {
        margin: 1rem 0;
    }

    aside#sidebar {
        display: none;
    }

    .page-content {
        .metadata {
            display: unset;
            p {
                display: inline-block;
            }
        }
    }
    /* todo: single page side bar on small screens? */
  }

